--- a/frontend/assets/css/bootstrap.css
+++ b/frontend/assets/css/bootstrap.css
@@ -3919,6 +3919,7 @@
     color: #495057;
     background-color: #fff;
     border-color: #dee2e6 #dee2e6 #fff;
+    font-weight: 100;
   }
   
   .nav-tabs .dropdown-menu {
