--- a/frontend/assets/js/DataTables/DataTables-1.10.21/css/dataTables.bootstrap4.css
+++ b/frontend/assets/js/DataTables/DataTables-1.10.21/css/dataTables.bootstrap4.css
@@ -72,6 +72,7 @@ table.dataTable thead > tr > td.sorting_asc,
 table.dataTable thead > tr > td.sorting_desc,
 table.dataTable thead > tr > td.sorting {
   padding-right: 30px;
+  text-align: center;
 }
 table.dataTable thead > tr > th:active,
 table.dataTable thead > tr > td:active {
