--- a/frontend/assets/css/app.css
+++ b/frontend/assets/css/app.css
@@ -88,7 +88,7 @@ table {
 #nav-tabContent,#nav-tabContentN{
   padding-top: 20px;
 }
-#querytable,#querytableN,#mappingtable{
+#querytable,#querytableN,#mappingtable, #nametable{
   margin-top: 30px;
   margin-bottom: 20px;
 }
